src/objects/Apttus_Base2__UIComponentProvider__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ClassName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsManifest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Application Manifest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ObjectName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ProviderId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Apttus UI Component Provider</label>
    <listViews>
        <fullName>Apttus_Base2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Base2__IsManifest__c</columns>
        <columns>Apttus_Base2__PackageName__c</columns>
        <columns>Apttus_Base2__ClassName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Providers</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus UI Component Providers</pluralLabel>
    <recordTypes>
        <fullName>Apttus_Base2__Action</fullName>
        <active>true</active>
        <description>Action provider record</description>
        <label>Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_Base2__Data</fullName>
        <active>true</active>
        <description>Data provider record</description>
        <label>Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_Base2__Label</fullName>
        <active>true</active>
        <description>Label provider record</description>
        <label>Label</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_Base2__Manifest</fullName>
        <active>true</active>
        <description>Application Manifest</description>
        <label>Manifest</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>